i18n/versioned_docs/ja-jp/docusaurus-plugin-content-docs/version-3.17/scalardb-cluster-dotnet-client-sdk/getting-started-with-aspnet-and-di.mdx
---
tags:
  - Enterprise Standard
  - Enterprise Premium
displayed_sidebar: docsJapanese
---

# ScalarDB Cluster .NET Client SDK での ASP.NET Core と依存性注入をはじめよう

import TranslationBanner from '/src/components/_translation-ja-jp.mdx';

<TranslationBanner />

ScalarDB Cluster .NET Client SDK は、ASP.NET Core などのフレームワークでの依存性注入 (DI) をサポートしています。

## SDK をインストールする

ScalarDB Cluster と同じメジャーバージョンとマイナーバージョンの [SDK](https://www.nuget.org/packages/ScalarDB.Client) を .NET プロジェクトにインストールします。組み込みの NuGet パッケージマネージャーを使用してこれを行うことができます。`<MAJOR>.<MINOR>` を使用しているバージョンに置き換えます。

```console
dotnet add package ScalarDB.Client --version '<MAJOR>.<MINOR>.*'
```

## クライアント設定の追加

ASP.NET Core アプリの `appsettings.json` ファイルに `ScalarDbOptions` セクションを追加し、`<HOSTNAME_OR_IP_ADDRESS>` を FQDN または IP アドレスに、`<PORT>` をクラスターのポート番号 (デフォルトでは `60053`) に置き換えます。

```json
{
  "ScalarDbOptions": {
    "Address": "http://<HOSTNAME_OR_IP_ADDRESS>:<PORT>",
    "HopLimit": 10
  }
}
```

設定ファイルやクライアントを設定するその他の方法の詳細については、[クライアント設定](common-reference.mdx#クライアント設定)を参照してください。

## トランザクションマネージャーをセットアップする

次のようにして、DI コンテナーに ScalarDB トランザクションマネージャーを登録できます。

```c#
using ScalarDB.Client.Extensions;

//...

var builder = WebApplication.CreateBuilder(args);

//...

builder.Services.AddScalarDb();
```

:::note

ScalarDB トランザクションマネージャーは、一時的なサービスとして登録されます。サービス有効期間の詳細については、 [.NET の依存関係の挿入 - サービスの有効期間](https://learn.microsoft.com/ja-jp/dotnet/core/extensions/dependency-injection#service-lifetimes)を参照してください。

:::

トランザクションマネージャーを登録したら、次のようにコントローラーのコンストラクターに挿入できます。

```c#
[ApiController]
public class OrderController: ControllerBase
{
    private readonly IDistributedTransactionManager _manager;
    private readonly ISqlTransactionManager _sqlManager;
    private readonly ITwoPhaseCommitTransactionManager _twoPhaseManager;
    private readonly ISqlTwoPhaseCommitTransactionManager _sqlTwoPhaseManager;
    private readonly IDistributedTransactionAdmin _admin;

    public OrderController(IDistributedTransactionManager manager,
                           ISqlTransactionManager sqlManager,
                           ITwoPhaseCommitTransactionManager twoPhaseManager,
                           ISqlTwoPhaseCommitTransactionManager sqlTwoPhaseManager,
                           IDistributedTransactionAdmin admin)
    {
        _manager = manager;
        _sqlManager = sqlManager;
        _twoPhaseManager = twoPhaseManager;
        _sqlTwoPhaseManager = sqlTwoPhaseManager;
        _admin = admin;
    }
}
```

これらの例は WebApi プロジェクト用ですが、GrpcService プロジェクトでも同様に動作します。

## 読み取り専用トランザクションを使用する

ScalarDB Cluster は、分散トランザクションマネージャーおよび SQL トランザクションマネージャーに対して読み取り専用トランザクションをサポートしています。`IDistributedTransactionManager` または `ISqlTransactionManager` を注入した後、`BeginReadOnlyAsync`/`BeginReadOnly` を呼び出して、読み取り操作のみが実行されることをサーバーに示すことができます。

```c#
var tran = await distributedTransactionManager.BeginReadOnlyAsync();
// このトランザクション内では読み取り操作のみを実行します
await tran.GetAsync(get);
await tran.CommitAsync();
```

:::note

読み取り専用モードは、2フェーズコミットトランザクションマネージャー (`ITwoPhaseCommitTransactionManager`、`ISqlTwoPhaseCommitTransactionManager`) ではサポートされて*いません*。これらのマネージャーで `BeginReadOnly*` を呼び出すと `NotSupportedException` がスローされます。

:::
